# azure-haskell

./: .gitignore  Makefile  README.md  cabal.project  fourmolu.yaml  stack.yaml
.github/workflows/: haskell-ci.yml
azure-auth/: LICENSE  azure-auth.cabal
azure-auth/Azure/: Auth.hs  Types.hs  Utils.hs
azure-auth/src/: Auth.hs  Azure.hs  Types.hs  Utils.hs
azure-blob-storage/: CHANGELOG.md  azure-blob-storage.cabal
azure-blob-storage/app/: Main.hs
azure-blob-storage/example/: Main.hs
azure-blob-storage/src/Azure/: Blob.hs  Clients.hs  DeleteBlob.hs  GetBlob.hs  PutBlob.hs  SharedAccessSignature.hs  Types.hs  UserDelegationKey.hs
azure-blob-storage/src/Azure/Blob/: DeleteBlob.hs  GetBlob.hs  PutBlob.hs  SharedAccessSignature.hs  Types.hs  UserDelegationKey.hs  Utils.hs
azure-email/: CHANGELOG.md  azure-email.cabal
azure-email/Azure/: Email.hs  Types.hs
azure-key-vault/: LICENSE  azure-key-vault.cabal
azure-key-vault/Azure/: Secret.hs
azure-key-vault/Azure/Secret/: Types.hs
azure-key-vault/app/: Main.hs
azure-key-vault/example/: Main.hs
azure-key-vault/src/: Secret.hs
