cabal-version:      3.0
name:               azure-blob-storage
version:            0.1.0.0
license:            MIT
license-file:       LICENSE
synopsis:           Boilerplace/startkit for azure in Haskell (using servant)
description:        This provides from useful functionalities for starting out with Azure in Haskell.
                    This includes authentication, Key vault, Blob storage and email communication related APIs.
author:             Holmusk
maintainer:         tech@holmusk.com
category:           Azure
build-type:         Simple
extra-doc-files:    CHANGELOG.md
tested-with:        GHC == 9.0.2
                    GHC == 9.2.8
                    GHC == 9.4.8
                    GHC == 9.6.3
                    GHC == 9.8.2

common common-options
    ghc-options:    -Wall
                    -Wincomplete-uni-patterns
                    -Wincomplete-record-updates
                    -Wcompat
                    -Widentities
                    -Wredundant-constraints
                    -fhide-source-paths
                    -Wpartial-fields
                    -Wunrecognised-pragmas
                    -Wmissing-deriving-strategies
                    -Wunticked-promoted-constructors
                    -Winvalid-haddock
                    -Woperator-whitespace
                    -Wredundant-bang-patterns
                    -Wunused-packages
    build-depends:  base >= 4.7 && <5
    default-language:   GHC2021
    default-extensions: DataKinds
                        DerivingStrategies
                        DerivingVia
                        LambdaCase
                        NoImportQualifiedPost
                        NoGeneralisedNewtypeDeriving
                        OverloadedStrings
                        OverloadedLabels
                        RecordWildCards
                        TypeFamilies
                        ViewPatterns
    if os(linux)
        ghc-options: -optl-fuse-ld=gold
        ld-options:  -fuse-ld=gold

library
    import:           common-options
    exposed-modules:  Azure.Types
    build-depends:    aeson
                    , azure-auth
                    , bytestring
                    , http-client
                    , http-client-tls
                    , http-types
                    , servant
                    , servant-client
                    , text
                    , time
                    , unliftio
    hs-source-dirs:   src
    default-language: Haskell2010

test-suite azure-blob-storage-test
    import:           common-options
    default-language: Haskell2010
    -- other-modules:
    -- other-extensions:
    type:             exitcode-stdio-1.0
    hs-source-dirs:   test
    main-is:          Main.hs
    build-depends:
        base ^>=4.7 && <5,
        azure-blob-storage
