cabal-version:      3.0
name:               azure-blob-storage
version:            0.1.0.0
license:            MIT
license-file:       LICENSE
synopsis:           Boilerplace/startkit for azure in Haskell (using servant)
description:        This provides from useful functionalities for starting out with Azure in Haskell.
                    This includes authentication, Key vault, Blob storage and email communication related APIs.
author:             Holmusk
maintainer:         tech@holmusk.com
category:           Azure
build-type:         Simple
extra-doc-files:    CHANGELOG.md
tested-with:        GHC == 9.0.2
                    GHC == 9.2.8
                    GHC == 9.4.8
                    GHC == 9.6.3
                    GHC == 9.8.2

common common-options
    ghc-options:    -Wall
                    -Wincomplete-uni-patterns
                    -Wincomplete-record-updates
                    -Wcompat
                    -Widentities
                    -Wredundant-constraints
                    -fhide-source-paths
                    -Wpartial-fields
                    -Wunrecognised-pragmas
                    -Wmissing-deriving-strategies
                    -Wunticked-promoted-constructors
                    -Winvalid-haddock
                    -Woperator-whitespace
                    -Wredundant-bang-patterns
                    -Wunused-packages
    build-depends:  base >= 4.7 && <5
    default-language:   GHC2021
    default-extensions: DataKinds
                        DerivingStrategies
                        DerivingVia
                        LambdaCase
                        NoImportQualifiedPost
                        NoGeneralisedNewtypeDeriving
                        OverloadedStrings
                        OverloadedLabels
                        RecordWildCards
                        TypeFamilies
                        ViewPatterns
    if os(linux)
        ghc-options: -optl-fuse-ld=gold
        ld-options:  -fuse-ld=gold

library
    import:           common-options
    exposed-modules:  Azure.Blob.Types
                      Azure.GetBlob
                      Azure.DeleteBlob
                      Azure.PutBlob
                      Azure.UserDelegationKey
                      Azure.SharedAccessSignature
    build-depends:    azure-auth
                    , aeson
                    , bytestring
                    , http-client-tls
                    , http-media
                    , servant
                    , servant-client
                    , servant-xml ^>= 1.0.3
                    , xmlbf
                    , text
                    , time
                    , unliftio
                    , unordered-containers
    hs-source-dirs:   src
    default-language: Haskell2010
